<resources>
    <string name="app_name">Mimicker Alarm</string>
    <string name="app_short_name">Mimicker</string>
    <string name="alarm_list_title">Alarms</string>
    <string name="action_settings">Settings</string>
    <string name="action_learn_more">Learn more</string>
    <string name="action_add_alarm">Add alarm</string>
    <string name="title_activity_alarm_settings">Settings</string>
...
